# aion-medsafe

./: .gitignore  .impeccable.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  SECURITY.md  prd0.md
.claude/: CLAUDE.md  settings.json
.claude/rules/: adversarial-testing.md  agents.md  aion-context-patterns.md  architecture-decisions.md  code-style.md  data-engineering.md  domain-knowledge.md  expert-team.md  provenance.md  security.md  testing.md  tiger-style.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  mutation.yml  pages.yml
docs/: README.md  go-to-market.md  launch-checklist.md  med-quest-mfcu-brief.md  med-quest-mfcu-onepager.md  med-quest-mfcu-tech-appendix.md  release-notes-v0.1.0.md
docs/site/: 404.html  app.js  index.html  robots.txt  sitemap.xml  styles.css
docs/spec/: sealed-evidence-packet.md
pipeline/: AION_CONTEXT_INTEGRATION.md  ARCHITECTURE.md  README.md  SOURCE_STATUS.md  pyproject.toml
pipeline/tests/: test_cms_owners.py  test_graph_export.py  test_hawaii_licensing.py  test_nppes_bulk.py  test_sam_exclusions.py
scripts/: audit.sh  setup.sh
system/: Cargo.toml
system/.aion/: medsafe.registry.json
system/policy/: detection_policy.yaml
system/src/: adjudication.rs  build.rs  decisions.rs  detection.rs  diff.rs  error.rs  graph.rs  ingest.rs  main.rs  owners.rs  packet.rs  policy.rs  provenance.rs  release.rs  resolve.rs  signals.rs
system/tests/: property_provenance.rs
(+25 files in other folders)
